--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,22 @@ body {
   background: white;
 }
 
+h1, h2, h3, h4, h5, h6, p, a, span, input, placeholder, li {
+  font-family: "Quicksand", sans-serif;
+}
+
+.fw400 {
+  font-weight: 400;
+}
+
+.fw700 {
+  font-weight: 700;
+}
+
+.fw900 {
+  font-weight: 900;
+}
+
 input, textarea {
   width: 100%;
   padding: 15px;
