--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -2,7 +2,7 @@ body {
   background: white;
 }
 
-h1, h2, h3, h4, h5, h6, p, a, span, input, placeholder, li {
+h1, h2, h3, h4, h5, h6, p, a, span, label, input, placeholder, li {
   font-family: 'Quicksand', sans-serif;
 }
 
