--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,8 @@
 
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
     --font-family-sans: 'Quicksand', system-ui, sans-serif;
 }
