changed base font to poppins

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-    --font-family-sans: 'Quicksand', system-ui, sans-serif;
+    --font-sans: 'Poppins', system-ui, sans-serif;
 }
